@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - the default value for "validate_formats" is once again false (it
+            became true in v0.020), to properly conform to the specification
 
 0.023     2021-02-21 18:36:32Z
           - fix "try/catch is experimental" warnings in perl 5.33.7
